--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <iconify-icon icon="bi:exclamation-circle-fill"></iconify-icon>Apenas letras minúsculas e sem acento.
                     </span>
                     <div class="container__pesquisa__btns__btn">
-                        <button type="button" class="btns cript">Criptografar</button>
+                        <button type="button" class="btns">Criptografar</button>
                         <button type="button" class="btns decript">Descriptografar</button>
                     </div>
                 </div>
