ajuste media celular img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </main>
                 <aside class="conteudo__resultado">
                     <div class="container-resultado" style="display: flex;">
-                        <img src="assets/High quality products 1 1.svg" alt="Logo-resultado">
+                        <img src="assets/High quality products 1 1.svg" id="img-resultado" alt="Logo-resultado">
                         <div class="msg-resultado">
                             <span>Nenhuma mensagem encontrada</span>
                             <span>Digite um texto que você deseja criptografar ou descriptografar.</span>
