--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/styles.css">
         <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
         <script src="scripts/script.js" defer></script>
-        <title>Document</title>
+        <title>Desafio Decodificador</title>
     </head>
     <body>
         <div class="container">
